# wpfestival

./: .gitignore  CHANGELOG.md  LICENSE  README.md
.github/workflows/: ci.yml
android/: .gitignore  README.md  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/emoji/: emoji_pl_cldr.tsv
android/app/src/main/assets/runtime/common/: README.md
android/app/src/main/java/com/turek/wpfestival/android/: CheckVoiceDataActivity.kt  DictionaryRepository.kt  EmojiAnnotationsRepository.kt  FestivalRuntimeManager.kt  FestivalTextChunker.kt  InstallTtsDataActivity.kt  SampleTextActivity.kt  SpeechTextNormalizer.kt  SynthResultCache.kt  WpFestivalEngine.kt  WpFestivalPreferences.kt  WpFestivalSettingsActivity.kt  WpFestivalTtsService.kt
android/app/src/main/jniLibs/: README.md
android/app/src/main/res/layout/: activity_settings.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: tts_engine.xml
android/app/src/test/java/com/turek/blackbox/android/: FestivalTextChunkerTest.java  SpeechTextNormalizerTest.java  WpFestivalEngineTest.java
docs/: ANALYSIS.md  ANDROID_WP_FESTIVAL_STATUS.md  ARCHITECTURE.md  BUILDING.md  LEGAL.md  SAPI5_STATUS.md
runtime/: README.md
windows/: README.md
windows/installer/: wp_festival_sapi5_female_x64.iss  wp_festival_sapi5_x64.iss
windows/sapi5/: CMakeLists.txt
windows/sapi5/common/: wp_festival_shared.h
windows/sapi5/config/: wp_festival_sapi5_config.cpp
windows/sapi5/engine/: wp_festival_sapi5.cpp
windows/scripts/: install_wp_sapi5.ps1  install_wp_sapi5_female.ps1  register_installed_wp_sapi5_female_machinewide.ps1  register_installed_wp_sapi5_machinewide.ps1  register_wp_com.ps1  test_wp_sapi5.ps1  uninstall_wp_sapi5.ps1  uninstall_wp_sapi5_female.ps1  unregister_installed_wp_sapi5_female_machinewide.ps1  unregister_installed_wp_sapi5_machinewide.ps1  unregister_wp_com.ps1
